@@ -1,3 +1,9 @@
+ags (0.7.34)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed disapearing automation
+	* ...
+
 ags (0.7.33)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
